[package]
name = "bluescribe"
version = "0.1.0"
description = "BlueScribe is an army list builder for tabletop wargames"
license = "GNU GPLv3"
repository = "https://github.com/BlueWinds/bluescribe"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libbluescribe"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.10", features = ["devtools"] }
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-fs = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
xml2json-rs = "1.0.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.x86_64-pc-windows-msvc]
# linker = "lld"
rustflags = [
  "-Lnative=/home/blue/.xwin/crt/lib/x86_64",
  "-Lnative=/home/blue/.xwin/sdk/lib/um/x86_64",
  "-Lnative=/home/blue/.xwin/sdk/lib/ucrt/x86_64"
]
